Net-policies/allow.fronend.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-all
spec:
  podSelector:
    matchLabels:
      app: frontend 
  ingress:
  - {}
