Net-policies/deny.all.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: deny-all-ingress-policy
spec:
 podSelector: {}
 policyTypes:
 - Ingress
